--- a/flaskblog/templates/frlogin.html
+++ b/flaskblog/templates/frlogin.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html>
-
-
-  <body>
-    <h1>Live streaming</h1>
-    <div>
-
-        <img src="{{ url_for('frlogin') }}" width="50%"/>
-    </div>
-            
+{% extends "layout.html" %}
+{% block content %}
+    <body>
+        <h1>Facial Recognition Login</h1>
+        <img src="{{ url_for('video_feed') }}" width="100%">
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+        </form>
     </body>
-
-
-</html>
+{% endblock content %}
